# Clippy

./: .gitignore  docker-compose.yml
clippy/: Dockerfile  pyproject.toml
clippy/app/: bot.py  download_video.py  exceptions.py  extract_video_id.py  get_metadata.py  healthcheck.py
